--- a/build.gradle
+++ b/build.gradle
@@ -21,3 +21,65 @@ dependencies {
 	implementation group: 'com.google.firebase', name: 'firebase-admin', version: '9.1.1'
 }
 
+//////////////////
+
+//buildscript {      // Configuration for building
+//	repositories {
+//		jcenter()      // Bintray's repository - a fast Maven Central mirror & more
+//		mavenCentral()
+//	}
+//	dependencies {
+//		classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.4.5'
+//		classpath 'org.akhikhl.gretty:gretty:+'
+//	}
+//}
+//plugins {
+//	id 'java'
+////	id 'org.springframework.boot' version '3.1.1'
+//	id 'io.spring.dependency-management' version '1.1.0'
+//	id 'org.springframework.boot' version '2.1.3.RELEASE'
+//}
+//repositories {   // repositories for JARs you access in your code
+//	maven {
+//		url 'https://maven-central.storage.googleapis.com'             // Google's mirror of Maven Central
+//	}
+//
+////maven {
+////  url 'https://oss.sonatype.org/content/repositories/snapshots' // SNAPSHOT repository if needed
+////}
+//
+//	mavenCentral()
+//}
+//apply plugin: 'java'
+//apply plugin: 'war'
+//apply plugin: 'org.akhikhl.gretty'
+//apply plugin: 'com.google.cloud.tools.appengine'
+//apply plugin: 'org.springframework.boot'
+//dependencies {
+//	providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
+//	providedCompile 'com.google.appengine:appengine:+'
+//	implementation 'org.springframework.boot:spring-boot-starter-web'
+//	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//	implementation group: 'com.google.firebase', name: 'firebase-admin', version: '9.1.1'
+////	implementation group: 'com.google.cloud', name: 'spring-cloud-gcp-dependencies', version: '4.5.1'
+////	implementation group: 'com.google.cloud.tools', name: 'appengine-maven-plugin', version: '2.4.4'
+//}
+//gretty {
+//	httpPort = 8080
+//	contextPath = '/'
+//	servletContainer = 'jetty9'  // What App Engine Flexible uses
+//}
+//
+//appengine {
+//	deploy {   // deploy configuration
+//		projectId ='GCLOUD_CONFIG'
+//		version = 'GCLOUD_CONFIG'
+//		stopPreviousVersion = true  // default - stop the current version
+//		promote = true              // default - & make this the current version
+//	}
+//}
+//
+//group = 'com.upb.appengine'
+//version = '0.0.1'
+//sourceCompatibility = 1.8
+//targetCompatibility = 1.8
